--- a/fastjson-master/pom.xml
+++ b/fastjson-master/pom.xml
@@ -618,10 +618,10 @@
 		</profile>
 
 	</profiles>
-	
-	
-	
-	
+
+</project>
+
+<project ...>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -662,6 +662,4 @@
             </plugin>
         </plugins>
     </reporting>
-
-
 </project>
