--- a/fastjson-master/pom.xml
+++ b/fastjson-master/pom.xml
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<jdk.version>1.8.0_131</jdk.version>
+		<jdk.version>1.6</jdk.version>
 	</properties>
 
 	<scm>
@@ -622,6 +622,7 @@
 	</profiles>
 
 
+	
     <reporting>
         <plugins>
             <plugin>
